# vio-simulation

./: CMakeLists.txt  readme.md  simulink.rviz
cfg/: camera.yaml  imu.yaml
inc/: camera.h  feature.h  imu.h  trajectory.h  util.h
msg/: feature.msg
src/: camera.cc  imu.cc  main.cc  trajectory.cc
